# kode

./: CMakeLists.txt  README.md  resources.qrc  test.txt
ui/: CMakeLists.txt  main.cpp
ui/impl/: FileHandler.cpp  ObjectItem.cpp  SorterFilter.cpp  UIHandler.cpp
ui/include/ui/: FileHandler.hpp  ObjectItem.hpp  SorterFilter.hpp  UIHandler.hpp
ui/qml/: AddDialog.qml  CustomButton.qml  CustomPopupElement.qml  DialogLabel.qml  ObjectGroup.qml  ObjectList.qml  ObjectListItem.qml  SortButton.qml  SortDialogHelper.qml  main.qml
ui/test/: CMakeLists.txt  ui_test.cpp
utils/: CMakeLists.txt
utils/impl/: error.cpp  utils.cpp
utils/include/utils/: error.hpp  utils.hpp
utils/test/: CMakeLists.txt  utls_test.cpp
